--- a/demo/microservice-simple-provider-user/src/main/resources/application.yml
+++ b/demo/microservice-simple-provider-user/src/main/resources/application.yml
@@ -1,8 +1,9 @@
+
 server:
   port: 2111
 spring:
   application:
-    name:simple-privider-user
+    name: microservice-simple-provider-user
   jpa:
     generate-ddl: false
     show-sql: true
@@ -12,10 +13,24 @@ spring:
     platform: h2
     schema: classpath:schema.sql
     data: classpath:data.sql
-
 logging:
   level:
     root:INFO
     org.heibernate:INFO
     org.hibernate.type.descriptor.sql.BasicBinder:TRACE
     org.heibernate.type.descriptor.sql.BasicExtractor:Trace
+#关闭认证（服务监控节点可以使用）
+management:
+  security:
+    enabled: false
+info:
+  app:
+    name:@project.artifactId@
+    encoding:@project.build.sourceEncoding@
+#注册到容器eureka
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:123@localhost:2110/eureka/
+  instance:
+    prefer-ip-address: true
